#10875 closed bug (fixed)
Paladin.1.3.pkg still fails to install
Reported by: | waddlesplash | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Applications/PackageInstaller | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Obtained from here: http://sourceforge.net/projects/paladin/files/Paladin.1.3.pkg/download
It installs 6 files and then hits an error.
Change History (11)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
I knew that :) However, this PKG exhibits a bug in PackageInstaller, and so it still should be fixed.
comment:3 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:4 by , 11 years ago
Milestone: | R1 → R1/beta1 |
---|
The .pkg files will continue to fail as they expect to be able to write things to read-only paths. We need a work around binary that will extract .pkg files to a folder so they can be repackaged / used.
The work around for the moment is to boot R1A4 and use that to extract .pkg files.
comment:5 by , 11 years ago
kallisti5,
That's what I have already done. I then took the additional steps to create an HPKG for Paladin. You can find it posted on Haikuware.com:
http://haikuware.com/directory/view-details/development/ides/paladin-13-hpkg
Just drop it into /boot/home/config/packages and it should just show up in your applications menu on the deskbar.
comment:6 by , 11 years ago
No, the package doesn't write anywhere. It is PackageInstaller which reads the package contents and executes scripts which then tries to write in read-only locations. But one can analyse the package and fix it in PackageInstaller (rewriting paths). Even modifying the post-install scripts was not beyond me. I already do that for other packages which try to directly copy/move files to read-only locations.
comment:7 by , 11 years ago
This one looks to have a solution as per http://cgit.haiku-os.org/haiku/commit/?id=838c4c87790af97ef53e3a8ece82d5e66abe2b8b
We need to find all paths these packages are writing to that are read-only and redirect them to something writable.
... or maybe we could wrangle all .pkg installs into a single root directory? ~/legacypackage/. That way things can be ran and repackaged into hpkg's more easily post-pm.
comment:8 by , 11 years ago
You realize that "wrangling all .pkg installs into a single root directory" needs the same path rewriting implementation that already happens (although apparently incompletly so)?
comment:9 by , 11 years ago
Milestone: | R1/beta1 → R1/alpha5 |
---|
comment:11 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
Try the one I posted on Haikuware....
http://haikuware.com/directory/view-details/development/ides/paladin-13-hpkg
It's in Haiku Package format. You just drop it into /boot/home/config/packages and it should just show up in your applications menu on the deskbar.