PackageInstaller: Fix Paladin installation

... and perhaps more packages build for pre-PM Haiku.
 * Restore the original path rewriting of "/boot/system"
   alongside rewriting "/boot/beos/system".
 * Rewrite "/boot/apps" in install scripts. This one fits
   the existing TODO that the rewriting should not use
   hard-coded replacement paths.
 * Fixes ticket #10875